--- a/app/views/shared/_topbar.html.haml
+++ b/app/views/shared/_topbar.html.haml
@@ -5,7 +5,7 @@
   #navbarsExampleDefault.navbar-collapse.offcanvas-collapse
     %ul.navbar-nav.mr-auto
       %li.nav-item.active
-        %a.nav-link{:href => root_path}
+        %a.nav-link{:href => dynamic_url_company}
           Minha Empresa
       - unless user_signed_in?
         %li.nav-item
