--- a/app/assets/stylesheets/positions.scss
+++ b/app/assets/stylesheets/positions.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the positions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#the-count {
+  text-align: right;
+  margin: 5px 0px;
+}
