--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -110,3 +110,26 @@ footer p {
   background-color: #f5f7fb;
   color: #000 !important;
 }
+
+.card-position {
+  border: none !important;
+}
+
+.card-position .card-body {
+  padding: 0px !important;
+}
+
+.group-social-network img{
+  margin: 0px 2px;
+}
+
+.share-copy-icon {
+  background-color: #72869c;
+  border-color: #72869c;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.conteiner-card {
+  box-shadow: 0px 0px 3px #888 !important;
+}
