--- a/app/views/shared/_topbar.html.haml
+++ b/app/views/shared/_topbar.html.haml
@@ -15,6 +15,9 @@
         %li.nav-item.active
           %a.nav-link{:href => dynamic_url_company}
             Minha Empresa
+        %li.nav-item.active
+          %a.nav-link{:href => positions_url}
+            Minhas Vagas
         %li.nav-item.dropdown
           %a#dropdown01.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#"} Settings
           .dropdown-menu{"aria-labelledby" => "dropdown01"}
