--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
   %body
     = render 'shared/topbar'
     %main.container{:role => "main"}
+    = render partial: 'shared/flash_message'
       = yield
     %footer
       %p Sistema desenvolvido por Jones - com base nos videos do Programador Showzim
