--- a/app/views/positions/public_position.html.haml
+++ b/app/views/positions/public_position.html.haml
@@ -8,8 +8,11 @@
 = render partial: 'shared/social_network', locals: {position: @position}
 
 .wrapper-form-applicant
-- if user_signed_in?
-    %p= "Insira suas informações abaixo para se candidatar à vaga de #{@position.name}"
-    = render 'applicants/form'
-- else
-    %p Você precisa está logado para se candidatar
+  - if user_signed_in?
+    - if UserApplicantQuery.new(current_user.id, @position.id).call
+        %p= "Você já aplicou para essa vaga."
+      - else
+        %p= "Insira suas informações abaixo para se candidatar à vaga de #{@position.name}"
+        = render 'applicants/form'
+  - else
+      %p Você precisa está logado para se candidatar
