--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,3 +37,7 @@
     %footer
       %p Sistema desenvolvido por Jones - com base nos videos do Programador Showzim
       %p= "Desde de #{Time.new.year}"
+  
+  #modal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modalLabel", :tabindex => "-1"}
+    .modal-dialog.modal-lg
+      .modal-content
