--- a/app/views/applicants/_new.js.erb
+++ b/app/views/applicants/_new.js.erb
@@ -1,2 +1,3 @@
-$("#modal").find(".modal-content").html("<%= j render(:partial => 'applicants/formmodal', :locals => { :applicant => @applicant, :position => @position})%>");
+$("#modal").find(".modal-content").html("<%= j render(:partial => 'applicants/formmodal', :locals => { :applicant 
+=> @applicant, :position => @position})%>");
 $("#modal").modal();
