Aula-20-17-modal-show-correction

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 %header.text-center
-  %h1 Ruby Positions
+  %h1 Open Vagas
   %p Mural de vagas compartilhadas pela comunidade.
 
 = search_form_for @q, url: root_path do |f|
