--- a/app/views/positions/index.html.haml
+++ b/app/views/positions/index.html.haml
@@ -16,6 +16,8 @@
         %td= career_name(position.career)
         %td= modality(position) # aplicar helper
         %td= contract_name(position.contract)
-        %td= link_to "Ver aplicações (#{position.applicants.count})", position_applicants_path(position), class: 'btn btn-warning btn-sm'
+        %td
+          - if position.applicants.size > 0
+            = link_to "Ver aplicações (#{position.applicants.count})", position_applicants_path(position), class: 'btn btn-warning btn-sm'
         %td
           = link_to 'Editar', edit_position_path(position), class: 'btn btn-primary btn-sm'
